fix: remove "*ngIf" to adding class "un-visible"

--- a/src/app/lsit-users/list-users.component.css
+++ b/src/app/lsit-users/list-users.component.css
@@ -175,3 +175,7 @@ p {
   justify-content: space-between;
   align-items: center;
 }
+
+.un-visible {
+  display: none;
+}
